# aerofiles

./: .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  download_test_data.sh  pyproject.toml  renovate.json  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini  vermin.conf
.github/workflows/: ci.yml
aerofiles/: __about__.py  __init__.py  errors.py  seeyou.py
aerofiles/aixm/: AixmAirspaceParser.py  AixmGeometryResolver.py  AixmOpenairConverter.py  __init__.py  aixm-to-openair.py  aixm.py  geocalc.py  gml.py
aerofiles/flarmcfg/: writer.py
aerofiles/formats/: __init__.py  base.py  seeyou.py  welt2000.py
aerofiles/igc/: __init__.py  patterns.py  reader.py  writer.py
aerofiles/openair/: __init__.py  patterns.py  reader.py  writer.py
aerofiles/seeyou/: __init__.py  common.py  converter.py  reader.py  writer.py
aerofiles/util/: __init__.py  timezone.py  units.py
aerofiles/welt2000/: __init__.py  converter.py  reader.py
aerofiles/xcsoar/: __init__.py  constants.py  writer.py
docs/: Makefile  api.rst  conf.py  contents.rst.inc  igc_file_writing.rst  index.rst  installation.rst  latexindex.rst  license.rst  make.bat
docs/_templates/: layout.html  sidebarintro.html
docs/_themes/aerofiles/: layout.html  theme.conf
docs/api/: aixm.rst  flarmcfg.rst  igc.rst  index.rst  openair.rst  seeyou.rst  welt2000.rst  xcsoar.rst
docs/guide/: aixm.rst  igc-reading.rst
tests/: __init__.py  test_flarmcfg_writer.py  test_igc_writer.py  test_openair.py  test_seeyou.py  test_seeyou_writer.py  test_welt2000.py  test_xcsoar_writer.py
tests/aixm/: test_converter.py  test_parser.py  test_resolver.py
tests/aixm/data/: README.txt
tests/data/: AAT.tsk  FAI.tsk  Racing.tsk
tests/data/openair/: sample-low-level.json  sample.json  sample.txt
tests/flarmcfg/: test_writer.py
tests/igc/: test_reader.py  test_timezone.py  test_writer.py
tests/igc/data/: bad-line.igc  example.igc  skydrop-2019-04-15.igc  skytraxx21-2023-04-15.igc  xctrack-2020-09-04.igc  xctrack-2022-04-07.igc  xctrack-2023-04-28.igc
tests/openair/: test_reader.py  test_writer.py
tests/openair/data/: 2026_03_Airspace_Germany_OA1.txt  broken.txt  sample-low-level.json  sample.json  sample.txt  si_asp_230525.openair
tests/seeyou/: test_reader.py  test_writer.py
tests/seeyou/data/: WAYPOINTS.CUP  simple.cup  task_container.cup
tests/welt2000/: test_reader.py
tests/welt2000/data/: WELT2000.TXT
tests/xcsoar/: test_writer.py
