[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aerofiles"
version = "1.5.3"
description = "waypoint, task, tracklog readers and writers for aviation"
readme = "README.rst"
license = {text = "MIT"}

authors = [
  {name = "Tobias Bieniek", email = "tobias.bieniek@gmx.de"},
  {name = "Tilmann Bubeck", email = "tilmann@bubecks.de"}
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: GIS",

  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.6",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Turbo87/aerofiles/"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.bdist_wheel]
universal = true

[vermin]
### Tips ###
# Possibly show helpful tips at the end, like those relating to backports or usage of unevaluated
# generic/literal annotations.
#
show_tips = no

### Violations ###
# Show only results that violate versions described by targets, which are required to be
# specified. Verbosity mode is automatically set to at least 2 in order to show violations in output
# text, but can be increased if necessary.
#
# If no rules are triggered while used in conjunction with targets, an exit code 0 will still be
# yielded due to inconclusivity.
#
# Can be used together with quiet mode such that only the violations are shown: no descriptive text,
# tips, or verdicts.
#
only_show_violations = yes
