[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aerofiles"
version = "1.5.4"
description = "waypoint, task, tracklog readers and writers for aviation"
readme = "README.rst"
license = {text = "MIT"}

authors = [
  {name = "Tobias Bieniek", email = "tobias.bieniek@gmx.de"},
  {name = "Tilmann Bubeck", email = "tilmann@bubecks.de"}
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering :: GIS",

  "Programming Language :: Python",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.6",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/Turbo87/aerofiles/"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.bdist_wheel]
universal = true
